--- a/application/modules/default/views/scripts/employeedocs/edit.ajax.phtml
+++ b/application/modules/default/views/scripts/employeedocs/edit.ajax.phtml
@@ -80,7 +80,7 @@ $("#fileuploadedit").uploadFile({
     returnType:"json",
     formData: {doc_id:$('#doc_id').val()},
     showDelete:true,
-    maxFileSize:2*1024*1024, // Maximum allowed file size: 2MB
+    maxFileSize:<?=MAX_UPLOAD_SIZE;?>*1024*1024, // Maximum allowed file size: 2MB
     maxFileCount: 5,
     showFileCounter:false,
     duplicateStrict:true,
