--- a/application/modules/default/views/scripts/announcements/form.phtml
+++ b/application/modules/default/views/scripts/announcements/form.phtml
@@ -144,7 +144,7 @@ $("#fileupload").uploadFile({
     allowedTypes:"jpg,png,jpeg,gif,doc,docx,pdf,xls,xlsx",	
     returnType:"json",
     formData: {},
-    maxFileSize:2*1024*1024, // Maximum allowed file size: 2MB
+    maxFileSize:<?=MAX_UPLOAD_SIZE;?>*1024*1024, // Maximum allowed file size: 2MB
     maxFileCount:5,
     showFileCounter:false,
     showDelete:true,
