--- a/application/modules/default/views/scripts/policydocuments/edit.phtml
+++ b/application/modules/default/views/scripts/policydocuments/edit.phtml
@@ -154,7 +154,7 @@ $("#fileupload").uploadFile({
     allowedTypes:"doc,docx,pdf",	
     returnType:"json",
     formData: {},
-    maxFileSize:2*1024*1024, // Maximum allowed file size: 2MB
+    maxFileSize:<?=MAX_UPLOAD_SIZE;?>*1024*1024, // Maximum allowed file size: 2MB
     maxFileCount:1,
     showFileCounter:false,
     showDelete:true,
